2009-01-14  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien Le Goff <jlegoff@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Added a way for the component list to know when a
	worker is connected or disconnected.
	* flumotion/admin/gtk/componentlist.py:
	Code concerning the tooltips rewritten.
	When a worker is offline its name would appear in italics and the
	tooltip of the component would explain that.
	Fixes #1036
	Fixes #1026

2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/httpstreamersteps.py:
	* flumotion/test/test_wizard_save.py:
	Fixed the tests for the last changes done.

2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/httpstreamersteps.py:
	Set the port from the porter and don't use the default one.
	Fixes #1209

2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* data/glade/consumption-wizard.glade:
	* flumotion/scenario/steps/consumptionsteps.py:
	Added the callbacks for the disk consumer checkboxes so the forward
	button is enabled/disabled properly.
	Fixes #1125

2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/consumers/disker/disker.py:
	Added a remote method to allow schedulling recordings with an ical
	file from the admin window.
	Fixes #1178

2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* data/glade/ondemand-wizard.glade:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/component/plugs/base.py:
	* flumotion/scenario/steps/ondemandstep.py:
	* flumotion/ui/fileselector.py:
	Added an optional apache logger to the on demand wizard page.
	Fixes #947

2009-01-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Xavier Queralt Mateu  <xqueralt@flumotion.com>